# releasy

./: .gitignore  .travis.yml  LICENSE.txt  Pipfile  README.md  comands.md  coverage.xml  prov.txt  prov2.txt  pyproject.toml  pytest.ini  sapos.issues.json  setup.py
gitparser/: cfd.py  changelog.py  gitparser.py  issue_download.py  prov.py  release-r-all.py  releasy-all.py  releasy-commit.py  releasy-prov-a.py  releasy-prov.py  releasy-r.py  stats.py  stats2.py
releasy/: __init__.py  __main__.py  change.py  collection.py  commit.py  config.py  const.py  constants.py  contributor.py  convert.py  data.py  developer.py  download.py  downloader.py  entity.py  exception.py  factory.py  gitparser.py  issueparser.py  main.py  metamodel.py  metric.py  mine_strategy.py  miner.py  miner_base.py  miner_base_release.py  miner_commit.py  miner_contributor.py  miner_git.py  miner_legacy.py  miner_main.py  miner_release.py  miner_semantic.py  model.py  model_git.py  parser.py  parser3.py  phase.py  project.py  project2.py  (+11 more)
tests/: .$mock.drawio.dtmp  contributor.py  create_data.py  mock.drawio  mock.py  mock_repository.py  parser.py  parser2.py  parser3.py  test_commit.py  test_commits.py  test_data.py  test_developer.py  test_factory.py  test_metric.py  test_mine_release.py  test_mine_release_regexp.py  test_mine_semantic.py  test_mine_strategy.py  test_miner.py  test_miner_base_release.py  test_miner_commit.py  test_miner_git.py  test_miner_legacy.py  test_miner_release.py  test_miner_semantic.py  test_misplaced_data.py  test_project.py  test_release.py  test_release2.py  (+7 more)
(+41 files in other folders)
